# casperproof

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  SETUP_NEEDED.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  turbo.json  typedoc.json
.claude/: settings.json
.claude/agents/: agent-runtime-engineer.md  casper-contract-engineer.md  devops-engineer.md  docs-writer.md  frontend-engineer.md  qa-test-engineer.md  sdk-engineer.md  security-reviewer.md  x402-payments-engineer.md
.claude/skills/attestation-oracle/: SKILL.md
.claude/skills/casper-stack/: SKILL.md
.claude/skills/commitment-scheme/: SKILL.md
.claude/skills/odra-contract-patterns/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  e2e.yml  release.yml
apps/marketing/: README.md  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/marketing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/marketing/components/: Builders.tsx  ClientCode.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  LiveNumbers.tsx  Losses.test.tsx  Losses.tsx  Problem.tsx  Roadmap.tsx  UseCases.tsx  ui.ts
apps/marketing/lib/: content.test.ts  content.ts  format.test.ts  format.ts  lossStats.test.ts  lossStats.ts  site.test.ts  site.ts  stats.test.ts  stats.ts
apps/mcp-server/: README.md  package.json
apps/mcp-server/src/: server.test.ts  server.ts  tools.test.ts  tools.ts
apps/web/: README.md  arc-onchain.cjs  deploy-onchain.cjs  next.config.mjs  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/attest/: AttestView.tsx  page.tsx
apps/web/src/app/attestation/[id]/: AttestationResult.test.tsx  AttestationResult.tsx  page.tsx
apps/web/src/app/insurance/: InsuranceView.tsx  page.tsx
apps/web/src/app/oracle/: OracleView.tsx  page.tsx
apps/web/src/app/slash/: SlashView.tsx  page.tsx
apps/web/src/app/staking/: StakingView.test.tsx  StakingView.tsx  page.tsx
apps/web/src/components/: AttestationPipeline.test.tsx  AttestationPipeline.tsx  JsonField.tsx  LiveFeed.tsx  Nav.tsx  SolvencyChart.tsx  UnstakeFlow.test.tsx  UnstakeFlow.tsx  WalletButton.tsx  ui.tsx
apps/web/src/lib/: csprclick.ts  format.test.ts  format.ts  onchain-config.ts  onchain-tx.test.ts  onchain-tx.ts  riskFactors.test.ts  riskFactors.ts  sdk.ts  staking.test.ts  staking.ts  useAttestations.ts  wallet.test.tsx  wallet.tsx  writes.test.ts  writes.ts
apps/web/src/test/: render.tsx
apps/x402-server/: README.md  package.json  vitest.config.ts
apps/x402-server/src/: config.test.ts  config.ts  index.ts  payment.test.ts  payment.ts  problem.test.ts  problem.ts  server.test.ts  server.ts
contracts/: Cargo.toml  Odra.toml  build.rs
contracts/problem/: Cargo.toml
contracts/problem/src/: lib.rs
contracts/src/: attestation_registry.rs  commitment.rs  insurance.rs  lib.rs  tokens.rs
contracts/tests/: insurance_tests.rs  registry_tests.rs  tokens_tests.rs
deploy-out/: arc.json  onchain.json
docker/: Dockerfile.contracts  Dockerfile.marketing  Dockerfile.node  Dockerfile.web  README.md
docker/nginx/: marketing.conf  nginx.prod.conf
docs/: API.md  ARCHITECTURE.md  COMMITMENT.md  CONTRACTS.md  DEMO_SCRIPT.md  DEPLOYMENT.md
docs/adr/: 0001-oracle-first-pivot.md  0002-s3-payload-store.md  0003-zero-cost-runtime.md  0004-odra-storage-model.md  0005-nightly-toolchain.md  0006-rfc7807-errors.md  0007-livenet-deploy-via-odra.md
docs/submission/: BUIDL.md  CHECKLIST.md  DEMO_SCRIPT.md  DEPLOY_RUNBOOK.md  VOTING_PACK.md
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: demo-data.ts
e2e/tests/: demo-flow.spec.ts  helpers.ts  insurance.spec.ts  oracle.spec.ts  slash.spec.ts
scripts/: deploy-testnet.ts  fund-testnet.ts  gen-golden.ts  seed-demo.ts
