[package]
name = "casperproof-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CasperProof Odra contracts: attestation_registry (oracle) + insurance + CEP-18 tokens."
authors = ["CasperProof"]
repository = "https://github.com/mihailShumilov/casperproof"

[dependencies]
odra = { version = "2", default-features = false }
odra-modules = { version = "2", default-features = false }
# Livenet deploy/seed (host-only, behind the `livenet` feature; never compiled to wasm).
odra-casper-livenet-env = { version = "2", optional = true }
hex = { version = "0.4", optional = true }
# Surfaces odra's `log::error!` deploy diagnostics (else the real RPC error is swallowed
# into a generic ContractDeploymentError).
env_logger = { version = "0.11", optional = true }

[features]
default = []
# Enables the `livenet` binary (`bin/livenet.rs`) that deploys to a real Casper network.
livenet = ["dep:odra-casper-livenet-env", "dep:hex", "dep:env_logger"]

# Host-only deploy + demo-seed binary. Built only with `--features livenet`; excluded from
# `cargo odra build` (wasm) and from `cargo test`.
[[bin]]
name = "livenet"
path = "bin/livenet.rs"
required-features = ["livenet"]
test = false

# wasm build harness — `cargo odra build` compiles each contract to wasm by building this
# bin for `wasm32-unknown-unknown` per `ODRA_MODULE` (odra emits the contract entrypoints
# from the `use casperproof_contracts;` import). On the host it is a no-op `main`.
[[bin]]
name = "casperproof_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[build-dependencies]
# Used by `build.rs` to emit the `odra_module` cfg + flags for `cargo odra build`.
odra-build = { version = "2", default-features = false }

[dev-dependencies]
odra-test = { version = "2", default-features = false }
# Host-only deps used solely by the cross-language golden-vector parity test in
# `commitment.rs`. The compiled contract never hashes on-chain (bytes-only rule, §8).
blake2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[lib]
crate-type = ["rlib"]
doctest = false

# The odra package is also the workspace root; the host-side `problem` crate
# (RFC 7807 problem-details mapping for the contract error taxonomy) is a member
# so it is built/tested with the rest of the Rust code but never compiled to wasm.
[workspace]
members = ["problem"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = true

[profile.dev]
overflow-checks = true
