[package]
name = "casperproof-problem"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RFC 7807 (Problem Details for HTTP APIs) mapping for the CasperProof contract error taxonomy."
authors = ["CasperProof"]
repository = "https://github.com/mihailShumilov/casperproof"

[dependencies]
rust-rfc7807 = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
doctest = true
